# NFLscraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
NFLscraper/: scraper.py  utility.py
